# notes

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
src/: app.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: new-note-cart.tsx  note-card.tsx
